Update some LSR colors

--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -18,7 +18,6 @@
         "!pip install geopandas\n",
         "!pip install metpy\n",
         "!pip install requests\n",
-        "!pip install os\n",
         "!pip install cartopy\n",
         "!pip install matplotlib\n",
         "import matplotlib.pyplot as plt\n",
@@ -34,12 +33,12 @@
         "id": "Gp2nuyjlzrb5"
       },
       "id": "Gp2nuyjlzrb5",
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": null,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f"
@@ -94,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 170,
+      "execution_count": null,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b"
@@ -165,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": null,
       "id": "018dd954",
       "metadata": {
         "colab": {
@@ -222,20 +221,20 @@
         "ax.scatter(y = TSGSR['LAT'], x = TSGSR['LON'], zorder=999, color = 'dodgerblue', label = 'TSTM Gust')\n",
         "ax.scatter(y = TSDSR['LAT'], x = TSDSR['LON'], zorder=999, color = 'blue', label = 'TSTM Damage')\n",
         "ax.scatter(y = LTGSR['LAT'], x = LTGSR['LON'], zorder=999, color = 'gold', label = 'Lightining')\n",
-        "ax.scatter(y = HALSR['LAT'], x = HALSR['LON'], zorder=999, color = 'green', label = 'Hail')\n",
+        "ax.scatter(y = HALSR['LAT'], x = HALSR['LON'], zorder=999, color = 'limegreen', label = 'Hail')\n",
         "ax.scatter(y = RANSR['LAT'], x = RANSR['LON'], zorder=999, color = 'purple', label = 'Rain')\n",
-        "ax.scatter(y = FLDSR['LAT'], x = FLDSR['LON'], zorder=999, color = 'green', label = 'Flood')\n",
-        "ax.scatter(y = FFDSR['LAT'], x = FFDSR['LON'], zorder=999, color = 'green', label = 'Flash Flood')\n",
+        "ax.scatter(y = FLDSR['LAT'], x = FLDSR['LON'], zorder=999, color = 'orange', label = 'Flood')\n",
+        "ax.scatter(y = FFDSR['LAT'], x = FFDSR['LON'], zorder=999, color = 'orange', label = 'Flash Flood')\n",
         "try:\n",
         "  ax.scatter(y = TORSR2['LAT'], x = TORSR2['LON'], zorder=999, color = 'darkred')\n",
         "  ax.scatter(y = FNCSR2['LAT'], x = FNCSR2['LON'], zorder=999, color = 'pink')\n",
         "  ax.scatter(y = TSGSR2['LAT'], x = TSGSR2['LON'], zorder=999, color = 'dodgerblue')\n",
         "  ax.scatter(y = TSDSR2['LAT'], x = TSDSR2['LON'], zorder=999, color = 'blue')\n",
         "  ax.scatter(y = LTGSR2['LAT'], x = LTGSR2['LON'], zorder=999, color = 'gold')\n",
-        "  ax.scatter(y = HALSR2['LAT'], x = HALSR2['LON'], zorder=999, color = 'green')\n",
+        "  ax.scatter(y = HALSR2['LAT'], x = HALSR2['LON'], zorder=999, color = 'limegreen')\n",
         "  ax.scatter(y = RANSR2['LAT'], x = RANSR2['LON'], zorder=999, color = 'purple')\n",
-        "  ax.scatter(y = FLDSR2['LAT'], x = FLDSR2['LON'], zorder=999, color = 'green')\n",
-        "  ax.scatter(y = FFDSR2['LAT'], x = FFDSR2['LON'], zorder=999, color = 'green')\n",
+        "  ax.scatter(y = FLDSR2['LAT'], x = FLDSR2['LON'], zorder=999, color = 'orange')\n",
+        "  ax.scatter(y = FFDSR2['LAT'], x = FFDSR2['LON'], zorder=999, color = 'orange')\n",
         "except:\n",
         "  pass\n",
         "try:\n",
@@ -244,10 +243,10 @@
         "  ax.scatter(y = TSGSR3['LAT'], x = TSGSR3['LON'], zorder=999, color = 'dodgerblue')\n",
         "  ax.scatter(y = TSDSR3['LAT'], x = TSDSR3['LON'], zorder=999, color = 'blue')\n",
         "  ax.scatter(y = LTGSR3['LAT'], x = LTGSR3['LON'], zorder=999, color = 'gold')\n",
-        "  ax.scatter(y = HALSR3['LAT'], x = HALSR3['LON'], zorder=999, color = 'green')\n",
+        "  ax.scatter(y = HALSR3['LAT'], x = HALSR3['LON'], zorder=999, color = 'limegreen')\n",
         "  ax.scatter(y = RANSR3['LAT'], x = RANSR3['LON'], zorder=999, color = 'purple')\n",
-        "  ax.scatter(y = FLDSR3['LAT'], x = FLDSR3['LON'], zorder=999, color = 'green')\n",
-        "  ax.scatter(y = FFDSR3['LAT'], x = FFDSR3['LON'], zorder=999, color = 'green')\n",
+        "  ax.scatter(y = FLDSR3['LAT'], x = FLDSR3['LON'], zorder=999, color = 'orange')\n",
+        "  ax.scatter(y = FFDSR3['LAT'], x = FFDSR3['LON'], zorder=999, color = 'orange')\n",
         "except:\n",
         "  pass\n",
         "\n",
@@ -294,7 +293,7 @@
         "id": "dWFSyt1poQCY"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +303,7 @@
         "id": "blsusDKXtT4z"
       },
       "id": "blsusDKXtT4z",
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     }
   ],
