Add tight box to figure

--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -46,7 +46,7 @@
         "cellView": "form"
       },
       "id": "Gp2nuyjlzrb5",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -154,7 +154,7 @@
         "id": "HBRGeFwjibZ6"
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         "id": "RH6uyCgriGqt"
       },
       "id": "RH6uyCgriGqt",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "018dd954",
       "metadata": {
         "colab": {
@@ -482,7 +482,7 @@
         "ax.set_position([box1.x0, box1.y0, box1.width * 0.8, box1 .height*0.95])\n",
         "ax.legend(loc='lower left', bbox_to_anchor=(1.10, 0.5),\n",
         "    ncol=1, fancybox=True, shadow=True, title = 'Local Storm Report Type')\n",
-        "plt.savefig(f'WarningsLSRs{Ends}.png')"
+        "plt.savefig(f'WarningsLSRs{Ends}.png', bbox_inches = 'tight')"
       ]
     },
     {
@@ -538,7 +538,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     }
   ],
