--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -46,7 +46,7 @@
         "cellView": "form"
       },
       "id": "Gp2nuyjlzrb5",
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 101,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -73,8 +73,8 @@
         "# @markdown ## Input the 3 digit WFO code or NA. At least one WFO must be added\n",
         "\n",
         "WFO_1 = 'GRR' #@param {type:\"string\"}\n",
-        "WFO_2 = 'IWX' #@param {type:\"string\"}\n",
-        "WFO_3 = 'DTX' #@param {type:\"string\"}\n",
+        "WFO_2 = 'DTX' #@param {type:\"string\"}\n",
+        "WFO_3 = 'IWX' #@param {type:\"string\"}\n",
         "WFO_4 = 'APX' #@param {type:\"string\"}\n",
         "\n",
         "# @markdown ## Input WFO(s) how you want them listed in the title\n",
@@ -154,7 +154,7 @@
         "id": "HBRGeFwjibZ6"
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         "id": "RH6uyCgriGqt"
       },
       "id": "RH6uyCgriGqt",
-      "execution_count": null,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 104,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 105,
       "id": "018dd954",
       "metadata": {
         "colab": {
@@ -328,7 +328,7 @@
           "height": 655
         },
         "id": "018dd954",
-        "outputId": "1d032379-2c6c-44c4-8dd9-1ae505f1fc05",
+        "outputId": "f1a5f3da-2b2e-483b-8bb9-60410c3c2a5d",
         "cellView": "form"
       },
       "outputs": [
@@ -352,11 +352,14 @@
         "axb = ax.twinx()\n",
         "axb.set_box_aspect(0.7)\n",
         "#Add Geometries\n",
-        "ax.add_geometries(TORWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'red', edgecolor = 'black', zorder = 998, alpha = 0.8)\n",
-        "ax.add_geometries(SVRWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'yellow', edgecolor = 'black', zorder = 997, alpha = 0.8)\n",
-        "ax.add_geometries(SMWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'orange', edgecolor = 'black', zorder = 996, alpha = 0.8)\n",
-        "ax.add_geometries(FFWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'green', edgecolor = 'black', zorder = 995, alpha = 0.8)\n",
-        "ax.add_geometries(DSWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'brown', edgecolor = 'black', zorder = 994, alpha = 0.8)\n",
+        "try:\n",
+        "  ax.add_geometries(TORWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'red', edgecolor = 'black', zorder = 998, alpha = 0.8)\n",
+        "  ax.add_geometries(SVRWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'yellow', edgecolor = 'black', zorder = 997, alpha = 0.8)\n",
+        "  ax.add_geometries(SMWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'orange', edgecolor = 'black', zorder = 996, alpha = 0.8)\n",
+        "  ax.add_geometries(FFWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'green', edgecolor = 'black', zorder = 995, alpha = 0.8)\n",
+        "  ax.add_geometries(DSWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'brown', edgecolor = 'black', zorder = 994, alpha = 0.8)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  ax.add_geometries(TORWarn2.geometry, crs = ccrs.PlateCarree(), facecolor =  'red', edgecolor = 'black', zorder = 998, alpha = 0.8)\n",
         "  ax.add_geometries(SVRWarn2.geometry, crs = ccrs.PlateCarree(), facecolor =  'yellow', edgecolor = 'black', zorder = 997, alpha = 0.8)\n",
@@ -402,7 +405,6 @@
         "ax.scatter(y = FLDSR['LAT'], x = FLDSR['LON'], zorder=999, color = 'green', label = 'Flood')\n",
         "ax.scatter(y = FFDSR['LAT'], x = FFDSR['LON'], zorder=999, color = 'olive', label = 'Flash Flood')\n",
         "ax.scatter(y = WSTSR['LAT'], x = WSTSR['LON'], zorder=999, color = 'cyan', label = 'Waterspout')\n",
-        "\n",
         "\n",
         "try:\n",
         "  ax.scatter(y = TORSR2['LAT'], x = TORSR2['LON'], zorder=999, color = 'darkred')\n",
@@ -482,7 +484,7 @@
         "ax.set_position([box1.x0, box1.y0, box1.width * 0.8, box1 .height*0.95])\n",
         "ax.legend(loc='lower left', bbox_to_anchor=(1.10, 0.5),\n",
         "    ncol=1, fancybox=True, shadow=True, title = 'Local Storm Report Type')\n",
-        "plt.savefig(f'WarningsLSRs{Ends}.png', bbox_inches = 'tight')"
+        "plt.savefig(f'WarningsLSRs{Ends}.png')"
       ]
     },
     {
@@ -500,6 +502,14 @@
       "source": [
         "# @title\n",
         "#Clear CWA 2/3/4 Warnings, SPSs, and LSRs for Additional Plots\n",
+        "try:\n",
+        "  del TORWarn, SVRWarn, FFWWarn, SMWWarn, DSWWarn\n",
+        "except:\n",
+        "  pass\n",
+        "try:\n",
+        "  del TORSR, FNCSR, LTGSR, RANSR, HALSR, TSDSR, TSGSR, FLDSR, FFDSR, NTGSR\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  del TORWarn2, SVRWarn2, FFWWarn2, SMWWarn2, DSWWarn2\n",
         "except:\n",
@@ -538,7 +548,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": null,
+      "execution_count": 106,
       "outputs": []
     }
   ],
