--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -484,7 +484,7 @@
         "ax.set_position([box1.x0, box1.y0, box1.width * 0.8, box1 .height*0.95])\n",
         "ax.legend(loc='lower left', bbox_to_anchor=(1.10, 0.5),\n",
         "    ncol=1, fancybox=True, shadow=True, title = 'Local Storm Report Type')\n",
-        "plt.savefig(f'WarningsLSRs{Ends}.png')"
+        "plt.savefig(f'WarningsLSRs{Ends}.png', bbox_inches = 'tight')"
       ]
     },
     {
