--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -462,7 +462,7 @@
         "SPSW = mpatches.Rectangle((0, 0), 1, 0.1, linewidth=2, edgecolor='black', facecolor='#FFE4B5')\n",
         "\n",
         "\n",
-        "axb.legend([TORW, SVRW, SMW, FFW, DSTW, SPSW], ['Tornado', 'Severe T-storm', 'Special Marine', 'Flash Flood', 'Dust Storm'],\n",
+        "axb.legend([TORW, SVRW, SMW, FFW, DSTW, SPSW], ['Tornado', 'Severe T-storm', 'Special Marine', 'Flash Flood', 'Dust Storm', 'Special Weather Statement'],\n",
         "            loc='upper left', fontsize=10, facecolor='white', markerscale=8,\n",
         "            labelcolor='k', title='  Warning Type', title_fontsize=10,\n",
         "           bbox_to_anchor=(1.10, 0.5), fancybox=True, shadow=True,).set_zorder(10)\n",
