--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "cellView": "form"
       },
       "id": "Gp2nuyjlzrb5",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -138,32 +138,32 @@
         "  pass\n",
         "#Pull LSRs\n",
         "try:\n",
-        "  LSR1 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_1+'&sts='+Begins+'Z&ets='+Ends+'&fmt=csv'\n",
+        "  LSR1 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_1+'&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv'\n",
         "  LSR1File=pd.read_csv(LSR1)\n",
         "except:\n",
         "  pass\n",
         "try:\n",
-        "  LSR2 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_2+'&sts='+Begins+'Z&ets='+Ends+'&fmt=csv'\n",
+        "  LSR2 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_2+'&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv'\n",
         "  LSR2File=pd.read_csv(LSR2)\n",
         "except:\n",
         "  pass\n",
         "try:\n",
-        "  LSR3 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_3+'&sts='+Begins+'Z&ets='+Ends+'&fmt=csv'\n",
+        "  LSR3 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_3+'&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv'\n",
         "  LSR3File=pd.read_csv(LSR3)\n",
         "except:\n",
         "  pass\n",
         "try:\n",
-        "  LSR4 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_4+'&sts='+Begins+'Z&ets='+Ends+'&fmt=csv'\n",
+        "  LSR4 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_4+'&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv'\n",
         "  LSR4File=pd.read_csv(LSR4)\n",
         "except:\n",
         "  pass\n",
         "try:\n",
-        "  LSR5 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_5+'&sts='+Begins+'Z&ets='+Ends+'&fmt=csv'\n",
+        "  LSR5 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_5+'&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv'\n",
         "  LSR5File=pd.read_csv(LSR5)\n",
         "except:\n",
         "  pass\n",
         "try:\n",
-        "  LSR6 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_6+'&sts='+Begins+'Z&ets='+Ends+'&fmt=csv'\n",
+        "  LSR6 = 'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/lsr.py?wfo[]='+WFO_6+'&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv'\n",
         "  LSR6File=pd.read_csv(LSR6)\n",
         "except:\n",
         "  pass\n",
@@ -175,7 +175,7 @@
         "id": "HBRGeFwjibZ6"
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "id": "RH6uyCgriGqt"
       },
       "id": "RH6uyCgriGqt",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -419,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "id": "018dd954",
       "metadata": {
         "colab": {
