Bug Fixes with Parsing SIG events

--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "cellView": "form"
       },
       "id": "Gp2nuyjlzrb5",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -229,8 +229,11 @@
         "  DSWWarn = Warn1.query('phenomena == \"DS\"')\n",
         "except:\n",
         "  pass\n",
-        "LSR1File['MAG'] = LSR1File['MAG'].replace('None', np.nan)\n",
-        "LSR1File['MAG'] = LSR1File['MAG'].astype(float)\n",
+        "try:\n",
+        "  LSR1File['MAG'] = LSR1File['MAG'].replace('None', np.nan)\n",
+        "  LSR1File['MAG'] = LSR1File['MAG'].astype(float)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  TORSR = LSR1File.query('TYPECODE == \"T\"')\n",
         "  FNCSR = LSR1File.query('TYPECODE == \"C\"')\n",
@@ -256,8 +259,11 @@
         "  DSWWarn2 = Warn2.query('phenomena == \"DS\"')\n",
         "except:\n",
         "    pass\n",
-        "LSR2File['MAG'] = LSR2File['MAG'].replace('None', np.nan)\n",
-        "LSR2File['MAG'] = LSR2File['MAG'].astype(float)\n",
+        "try:\n",
+        "  LSR2File['MAG'] = LSR2File['MAG'].replace('None', np.nan)\n",
+        "  LSR2File['MAG'] = LSR2File['MAG'].astype(float)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  TORSR2 = LSR2File.query('TYPECODE == \"T\"')\n",
         "  FNCSR2 = LSR2File.query('TYPECODE == \"C\"')\n",
@@ -284,9 +290,11 @@
         "  DSWWarn3 = Warn3.query('phenomena == \"DS\"')\n",
         "except:\n",
         "  pass\n",
-        "\n",
-        "LSR3File['MAG'] = LSR3File['MAG'].replace('None', np.nan)\n",
-        "LSR3File['MAG'] = LSR3File['MAG'].astype(float)\n",
+        "try:\n",
+        "  LSR3File['MAG'] = LSR3File['MAG'].replace('None', np.nan)\n",
+        "  LSR3File['MAG'] = LSR3File['MAG'].astype(float)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  TORSR3 = LSR3File.query('TYPECODE == \"T\"')\n",
         "  FNCSR3 = LSR3File.query('TYPECODE == \"C\"')\n",
@@ -313,9 +321,11 @@
         "  DSWWarn4 = Warn4.query('phenomena == \"DS\"')\n",
         "except:\n",
         "  pass\n",
-        "\n",
-        "LSR4File['MAG'] = LSR4File['MAG'].replace('None', np.nan)\n",
-        "LSR4File['MAG'] = LSR4File['MAG'].astype(float)\n",
+        "try:\n",
+        "  LSR4File['MAG'] = LSR4File['MAG'].replace('None', np.nan)\n",
+        "  LSR4File['MAG'] = LSR4File['MAG'].astype(float)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  TORSR4 = LSR4File.query('TYPECODE == \"T\"')\n",
         "  FNCSR4 = LSR4File.query('TYPECODE == \"C\"')\n",
@@ -343,9 +353,11 @@
         "  DSWWarn5 = Warn5.query('phenomena == \"DS\"')\n",
         "except:\n",
         "  pass\n",
-        "\n",
-        "LSR5File['MAG'] = LSR5File['MAG'].replace('None', np.nan)\n",
-        "LSR5File['MAG'] = LSR5File['MAG'].astype(float)\n",
+        "try:\n",
+        "  LSR5File['MAG'] = LSR5File['MAG'].replace('None', np.nan)\n",
+        "  LSR5File['MAG'] = LSR5File['MAG'].astype(float)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  TORSR5 = LSR5File.query('TYPECODE == \"T\"')\n",
         "  FNCSR5 = LSR5File.query('TYPECODE == \"C\"')\n",
@@ -373,9 +385,11 @@
         "  DSWWarn6 = Warn6.query('phenomena == \"DS\"')\n",
         "except:\n",
         "  pass\n",
-        "\n",
-        "LSR6File['MAG'] = LSR6File['MAG'].replace('None', np.nan)\n",
-        "LSR6File['MAG'] = LSR6File['MAG'].astype(float)\n",
+        "try:\n",
+        "  LSR6File['MAG'] = LSR1File['MAG'].replace('None', np.nan)\n",
+        "  LSR6File['MAG'] = LSR1File['MAG'].astype(float)\n",
+        "except:\n",
+        "  pass\n",
         "try:\n",
         "  TORSR6 = LSR6File.query('TYPECODE == \"T\"')\n",
         "  FNCSR6 = LSR6File.query('TYPECODE == \"C\"')\n",
