--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "id": "Tqakfay4EriZ"
       },
       "id": "Tqakfay4EriZ",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,10 +63,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
-        "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f"
+        "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -115,7 +116,7 @@
         "id": "egAfE04zVatM"
       },
       "id": "egAfE04zVatM",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +190,7 @@
         "id": "HBRGeFwjibZ6"
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -275,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "id": "018dd954",
       "metadata": {
         "id": "018dd954",
@@ -546,8 +547,8 @@
         "  axb.set_box_aspect(0.7)\n",
         "  #Add Geometries\n",
         "  try:\n",
-        "    ax.add_geometries(HWWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#DAA520', edgecolor = 'black', zorder = 995, alpha = 0.7)\n",
-        "    ax.add_geometries(WIYWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#D2B48C', edgecolor = 'black', zorder = 992, alpha = 0.6)\n",
+        "    ax.add_geometries(HWWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#DAA520', edgecolor = 'black', zorder = 995, alpha = 1)\n",
+        "    ax.add_geometries(WIYWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#D2B48C', edgecolor = 'black', zorder = 992, alpha = 1)\n",
         "  except:\n",
         "    pass\n",
         "  ax.add_geometries(MarZoneMap.geometry, crs = ccrs.PlateCarree(), facecolor = 'none', edgecolor = 'black',  zorder=999)\n",
@@ -621,7 +622,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     }
   ],
