--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "id": "Tqakfay4EriZ"
       },
       "id": "Tqakfay4EriZ",
-      "execution_count": null,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -587,6 +587,42 @@
         "      ncol=1, fancybox=True, shadow=True, title = 'Local Storm Report Type')\n",
         "  plt.savefig(f'WND_WarningsLSRs{Ends}.png', bbox_inches = 'tight')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Clear All Data To Avoid Extraneous Variables For Future Plots"
+      ],
+      "metadata": {
+        "id": "vYcXoxaMUf2K"
+      },
+      "id": "vYcXoxaMUf2K"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title\n",
+        "#Clear CWA 2/3/4 Warnings, SPSs, and LSRs for Additional Plots\n",
+        "try:\n",
+        "  del TORWarn, SVRWarn, FFWWarn, SMWWarn, DSWWarn, HWWWarn, WIYWarn, FAWWarn, FAYWarn, SPSWarn\n",
+        "except:\n",
+        "  pass\n",
+        "try:\n",
+        "  del TORSR, FNCSR, LTGSR, RANSR, HALSR, TSDSR, TSGSR, FLDSR, FFDSR, NTYSR, NTWSR, NTSSR, NTDSR, SIGTSGSR, SIGHALSR\n",
+        "except:\n",
+        "  pass\n",
+        "try:\n",
+        "  del SPSFile\n",
+        "except:\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "dWFSyt1poQCY",
+        "cellView": "form"
+      },
+      "id": "dWFSyt1poQCY",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
