--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "id": "Tqakfay4EriZ"
       },
       "id": "Tqakfay4EriZ",
-      "execution_count": 89,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f"
@@ -73,8 +73,8 @@
         "# @markdown # Start and End Date/Time Selection\n",
         "# @markdown ## Enter in the format YYYY-MM-DDT:HH:MM\n",
         "\n",
-        "Begins = '2023-08-24T12:00' #@param {type:\"string\"}\n",
-        "Ends = '2023-08-25T12:00' #@param {type:\"string\"}\n",
+        "Begins = '2024-08-30T12:00' #@param {type:\"string\"}\n",
+        "Ends = '2024-08-31T12:00' #@param {type:\"string\"}\n",
         "\n",
         "WestLong = -89.5 # @param {type:\"number\"}\n",
         "EastLong = -82.5 # @param {type:\"number\"}\n",
@@ -105,17 +105,17 @@
         "SevereOnly = True # @param {type:\"boolean\"}\n",
         "\n",
         "#Plot FFW/FLW/FAY and Rain/Flooding LSRs Only\n",
-        "HydroOnly = True # @param {type:\"boolean\"}\n",
+        "HydroOnly = False # @param {type:\"boolean\"}\n",
         "\n",
         "#Plot Non Convective Wind Alerts/LSRs Only\n",
-        "NonTstmWind = True # @param {type:\"boolean\"}\n"
+        "NonTstmWind = False # @param {type:\"boolean\"}\n"
       ],
       "metadata": {
         "cellView": "form",
         "id": "egAfE04zVatM"
       },
       "id": "egAfE04zVatM",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         "  except:\n",
         "    windfile = pd.DataFrame(data)\n",
         "else:\n",
-        "  pass\n",
+        "  windfile = pd.DataFrame(data)\n",
         "\n",
         "#Add Marine Zones for Great Lakes\n",
         "mzone_file = geopandas.read_file('/vsicurl/https://github.com/scottthomaswx/WarningPlotter/raw/main/mz19se23.shp')\n"
@@ -189,7 +189,7 @@
         "id": "HBRGeFwjibZ6"
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
