--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 16,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -86,8 +86,8 @@
         "# @markdown # Start and End Date/Time Selection\n",
         "# @markdown ## Enter in the format YYYY-MM-DDT:HH:MM\n",
         "\n",
-        "Begins = '2022-12-20T12:00' #@param {type:\"string\"}\n",
-        "Ends = '2022-12-26T12:00' #@param {type:\"string\"}\n",
+        "Begins = '2024-12-04T00:00' #@param {type:\"string\"}\n",
+        "Ends = '2024-12-07T00:00' #@param {type:\"string\"}\n",
         "\n",
         "WestLong = -90 # @param {type:\"number\"}\n",
         "EastLong = -82 # @param {type:\"number\"}\n",
@@ -139,11 +139,10 @@
         "WinterStorm = True # @param {type:\"boolean\"}\n"
       ],
       "metadata": {
-        "id": "egAfE04zVatM",
-        "cellView": "form"
+        "id": "egAfE04zVatM"
       },
       "id": "egAfE04zVatM",
-      "execution_count": 70,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -186,7 +185,7 @@
         "else:\n",
         "  Warn1 = pd.DataFrame(data)\n",
         "\n",
-        "if SevereAndHydroIBWOnly == True or SevereAndHydroFull == True or SevereOnly == True:\n",
+        "if SevereAndHydroIBWOnly == True or SevereAndHydroFull == True or SevereOnly == True or SnowSquall == True or WinterStorm == True:\n",
         "  try:\n",
         "    SPSFile = geopandas.read_file('https://mesonet.agron.iastate.edu/cgi-bin/request/gis/sps.py?&sts='+Begins+'Z&ets='+Ends+'Z&fmt=csv')\n",
         "  except:\n",
@@ -230,9 +229,9 @@
         "  try:\n",
         "    winterstormfile = geopandas.read_file(f'https://mesonet.agron.iastate.edu/cgi-bin/request/gis/watchwarn.py?accept=shapefile&sts={Begins}Z&ets={Ends}Z&limitps=yes&phenomena=WS,SQ,IS,LE,BZ,WW&significance=W,W,W,W,W,Y')\n",
         "  except:\n",
-        "    winterstorm = pd.DataFrame(data)\n",
+        "    winterstormfile = pd.DataFrame(data)\n",
         "else:\n",
-        "  snowsqfile = pd.DataFrame(data)\n",
+        "    winterstormfile = pd.DataFrame(data)\n",
         "\n",
         "#Add Marine Zones for Great Lakes\n",
         "mzone_file = geopandas.read_file('/vsicurl/https://github.com/scottthomaswx/WarningPlotter/raw/main/mz19se23.shp')\n"
@@ -240,13 +239,13 @@
       "metadata": {
         "cellView": "form",
         "id": "HBRGeFwjibZ6",
-        "outputId": "dccf64fe-fc3d-43a2-b9c2-a02812d23251",
+        "outputId": "70073a0e-ddc7-4182-c347-2471df81372a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": 71,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 31,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -294,7 +293,7 @@
         "HWWWarn=windfile.query('PHENOM == \"HW\"')\n",
         "WIYWarn=windfile.query('PHENOM == \"WI\"')\n",
         "\n",
-        "SQWWarn=snowsqfile.query('phenomena == \"SQ\"')\n",
+        "SQWWarn=snowsqfile\n",
         "ISWWarn=winterstormfile.query('PHENOM == \"IS\"')\n",
         "LEWWarn=winterstormfile.query('PHENOM == \"LE\"')\n",
         "BZWWarn=winterstormfile.query('PHENOM == \"BZ\"')\n",
@@ -377,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 34,
       "id": "018dd954",
       "metadata": {
         "id": "018dd954",
@@ -843,7 +842,7 @@
         "      ncol=1, fancybox=True, shadow=True, title = 'Local Storm Report Type')\n",
         "  plt.savefig(f'SQW_Full_WarningsLSRs{Ends}.png', bbox_inches = 'tight')\n",
         "\n",
-        "if SnowSquall == True:\n",
+        "if WinterStorm == True:\n",
         "  fig = plt.figure(figsize=(12, 12), facecolor='white', edgecolor=\"black\", linewidth =6)\n",
         "  ax=fig.add_subplot(1,1,1, projection=ccrs.PlateCarree())\n",
         "  ax.set_extent((WestLong, EastLong, SouthLat, NorthLat))\n",
@@ -956,7 +955,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     }
   ],
