Fix Areal Flood Products To Be Polygon Only, Fix Plot Descriptions

--- a/Warning_Plotter.ipynb
+++ b/Warning_Plotter.ipynb
@@ -48,7 +48,7 @@
         "id": "Tqakfay4EriZ"
       },
       "id": "Tqakfay4EriZ",
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -62,20 +62,8 @@
       "id": "1ujObwCYTIzj"
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "######Note: If North/South Distance much greater East/West Distance, Longitude range will need to be expanded to ensure full North/South Distance is plotted\n",
-        "\n",
-        "######Note: If Plotting for Long Fused Hazards (e.g. Tropical/Wind/Winter) Set Start Time Before Hazard Issuance!"
-      ],
-      "metadata": {
-        "id": "kTbLKlT9yPAJ"
-      },
-      "id": "kTbLKlT9yPAJ"
-    },
-    {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 39,
       "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
       "metadata": {
         "id": "0cfcf253-63f2-4579-baf4-2ac9c371395f",
@@ -83,22 +71,40 @@
       },
       "outputs": [],
       "source": [
-        "# @markdown # Start and End Date/Time Selection\n",
-        "# @markdown ## Enter in the format YYYY-MM-DDT:HH:MM\n",
+        "# @markdown Start and End Date/Time Selection, And Map Bounds\n",
         "\n",
-        "Begins = '2024-12-04T00:00' #@param {type:\"string\"}\n",
-        "Ends = '2024-12-07T00:00' #@param {type:\"string\"}\n",
+        "# @markdown If Plotting for Long Fused Hazards (e.g. Tropical/Wind/Winter) Set Start Time Before Hazard Issuance!\n",
         "\n",
-        "WestLong = -90 # @param {type:\"number\"}\n",
-        "EastLong = -82 # @param {type:\"number\"}\n",
-        "NorthLat = 45 # @param {type:\"number\"}\n",
-        "SouthLat = 40 # @param {type:\"number\"}"
+        "# @markdown If North/South Distance much greater East/West Distance, Longitude range will need to be expanded to ensure full North/South Distance is plotted\n",
+        "\n",
+        "Begins = 'YYYY-MM-DDTHH:MM' #@param {type:\"string\"}\n",
+        "Ends = 'YYYY-MM-DDTHH:MM' #@param {type:\"string\"}\n",
+        "\n",
+        "WestLong = None # @param {type:\"number\"}\n",
+        "EastLong = None # @param {type:\"number\"}\n",
+        "NorthLat = None # @param {type:\"number\"}\n",
+        "SouthLat = None # @param {type:\"number\"}"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Select Which Type of Event(s) You Wish To Create Plots For"
+        "#Select Which Type of Event(s) You Wish To Create Plots For\n",
+        "\n",
+        "## Summary of Plot Types\n",
+        "\n",
+        "Plot Name | What's Included\n",
+        "---------------- | ----------------\n",
+        "Severe and Hydro IBW Only | Severe TSTM, Tornado, Special Marine, Special Wx Statement, Flash Flood & LSRs\n",
+        "Severe and Hydro Full | Severe TSTM, Tornado, Special, Special Wx Statement, Flash Flood Warning, Areal Flood Warning/Advisory & LSRs\n",
+        "Severe Only | Severe TSTM Tornado, Special Marine Warnings, Special Wx Statement\n",
+        "Hydro Only | Flash Flood Warning, Areal Flood Warning/Advisory & LSRs\n",
+        "Non TSTM Wind | Wind Advisories, High Wind Warnings, and LSRs\n",
+        "Tropical Only | Tropical Storm, Hurricane, and Extreme Wind Warnings & LSRs\n",
+        "Tropical Wind | Tropical Storm, Hurricane, Extreme Wind, And Non TSTM Wind Warnings/Advisories and LSRs\n",
+        "Tropical Full | All Tropical, Wind, FLooding, and Tornado Warnings/Advisories and LSRs\n",
+        "Snow Squall | Snow Squall Warnings and LSRs\n",
+        "Winter Storm | Winter Weather Related Warnings/Advisories and LSRs\n"
       ],
       "metadata": {
         "id": "3iUz_jTGVeEN"
@@ -108,10 +114,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#Plot SVR/FFW/TOR/PS/SMW And All LSRs\n",
+        "#Plot SVR/FFW/TOR/SPS/SMW And All LSRs\n",
         "SevereAndHydroIBWOnly = False # @param {type:\"boolean\"}\n",
         "\n",
-        "#Plot SVR/FFW/TOR/PS/SMW/FAY/FAW And All LSRs Above\n",
+        "#Plot SVR/FFW/TOR/SPS/SMW/FAY/FAW And All LSRs Above\n",
         "SevereAndHydroFull = False # @param {type:\"boolean\"}\n",
         "\n",
         "#Plot SVR/TOR/SMW/SPS and Severe Wx LSRs Only\n",
@@ -133,16 +139,17 @@
         "TropicalFull = False # @param {type:\"boolean\"}\n",
         "\n",
         "#Plot Snow Squalls !!Set Start Date to Issuance Date of First Hazards!!!\n",
-        "SnowSquall = True # @param {type:\"boolean\"}\n",
+        "SnowSquall = False # @param {type:\"boolean\"}\n",
         "\n",
         "#Plot All Winter !!Set Start Date to Issuance Date of First Hazards!!!\n",
-        "WinterStorm = True # @param {type:\"boolean\"}\n"
+        "WinterStorm = False # @param {type:\"boolean\"}\n"
       ],
       "metadata": {
-        "id": "egAfE04zVatM"
+        "id": "egAfE04zVatM",
+        "cellView": "form"
       },
       "id": "egAfE04zVatM",
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -238,24 +245,11 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "HBRGeFwjibZ6",
-        "outputId": "70073a0e-ddc7-4182-c347-2471df81372a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HBRGeFwjibZ6"
       },
       "id": "HBRGeFwjibZ6",
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:pyogrio._io:Skipping field ar_ugc: unsupported OGR type: 5\n",
-            "WARNING:pyogrio._io:Skipping field ar_ugcname: unsupported OGR type: 5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -269,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 35,
       "id": "508c7f7b",
       "metadata": {
         "id": "508c7f7b",
@@ -284,8 +278,8 @@
         "SMWWarn = Warn1.query('phenomena == \"MA\"')\n",
         "DSWWarn = Warn1.query('phenomena == \"DS\"')\n",
         "SPSWarn = SPSFile\n",
-        "FAWWarn=floodfile.query('SIG == \"W\"')\n",
-        "FAYWarn=floodfile.query('SIG == \"Y\"')\n",
+        "FAWWarn=floodfile.query('SIG == \"W\" & GTYPE == \"P\"')\n",
+        "FAYWarn=floodfile.query('SIG == \"Y\"& GTYPE == \"P\"')\n",
         "HUWarn=tropfile.query('PHENOM == \"HU\"')\n",
         "TRWarn=tropfile.query('PHENOM == \"TR\"')\n",
         "EWWarn=tropfile.query('PHENOM == \"EW\"')\n",
@@ -376,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "018dd954",
       "metadata": {
         "id": "018dd954",
@@ -467,9 +461,9 @@
         "    ax.add_geometries(SVRWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'yellow', edgecolor = 'black', zorder = 997, alpha = 0.7)\n",
         "    ax.add_geometries(SMWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'orange', edgecolor = 'black', zorder = 996, alpha = 0.7)\n",
         "    ax.add_geometries(FFWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  'green', edgecolor = 'black', zorder = 995, alpha = 0.7)\n",
-        "    ax.add_geometries(SPSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFE4B5', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
-        "    ax.add_geometries(FAWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#00FF00', edgecolor = 'black', zorder = 992, alpha = 0.6)\n",
-        "    ax.add_geometries(FAYWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#00FF7F', edgecolor = 'black', zorder = 991, alpha = 0.6)\n",
+        "    ax.add_geometries(SPSWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#FFE4B5', edgecolor = 'black', zorder = 991, alpha = 0.6)\n",
+        "    ax.add_geometries(FAWWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#00FF00', edgecolor = 'black', zorder = 993, alpha = 0.6)\n",
+        "    ax.add_geometries(FAYWarn.geometry, crs = ccrs.PlateCarree(), facecolor =  '#00FF7F', edgecolor = 'black', zorder = 992, alpha = 0.6)\n",
         "  except:\n",
         "    pass\n",
         "  ax.add_geometries(MarZoneMap.geometry, crs = ccrs.PlateCarree(), facecolor = 'none', edgecolor = 'black',  zorder=999)\n",
@@ -955,7 +949,7 @@
         "cellView": "form"
       },
       "id": "dWFSyt1poQCY",
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     }
   ],
